# regista-lens

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  workspace.yaml
.github/workflows/: ci.yml
docs/: data_model.md
ingestion/common/: http.py  name_utils.py  storage.py
ingestion/fbref/: client.py  parsers.py  schemas.py
ingestion/transfermarkt/: client.py  parsers.py  schemas.py
ingestion/understat/: client.py  parsers.py  schemas.py
orchestration/: checks.py  definitions.py  partitions.py  resources.py
orchestration/assets/: dbt.py  raw.py
scripts/: ingest_season.py
tests/fixtures/: fbref_player_season_stats_sample.html  transfermarkt_market_values_sample.html  understat_league_page_sample.html
tests/unit/: test_name_utils.py  test_parsers.py  test_schemas.py  test_transfermarkt_parsers.py  test_transfermarkt_schemas.py  test_understat_parsers.py  test_understat_schemas.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: name_normalization.sql
transform/models/marts/: _marts__models.yml  dim_competition.sql  dim_player.sql  dim_season.sql  dim_team.sql  fct_player_season_stats.sql  fct_player_season_valuations.sql
transform/models/staging/fbref/: _fbref__models.yml  _fbref__sources.yml  stg_fbref__player_season_stats.sql
transform/models/staging/transfermarkt/: _transfermarkt__models.yml  _transfermarkt__sources.yml  (+1 more)
transform/seeds/: player_match_overrides.csv  team_name_mappings.csv
transform/tests/generic/: test_xg_per_shot_range.sql
(+3 files in other folders)
