[project]
name = "regista-lens"
version = "0.1.0"
description = "Football analytics data warehouse — FBref, Understat, Transfermarkt into a star schema on DuckDB."
requires-python = ">=3.11"
dependencies = [
    "dagster~=1.9",
    "dagster-webserver~=1.9",
    "dagster-dbt~=0.25",
    "dagster-duckdb~=0.25",
    "dbt-core~=1.9",
    "dbt-duckdb~=1.9",
    "duckdb~=1.1",
    "pydantic~=2.10",
    "structlog~=24.4",
    "httpx~=0.28",
    "beautifulsoup4~=4.12",
    "lxml~=5.3",
    "jellyfish~=1.1",
    "unidecode~=1.3",
    "nodriver>=0.38,<1",
    "pandas>=2.0,<3",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "ruff~=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "orchestration"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
